# HPE-Step1X-3D

./: .dockerignore  .gitignore  BETTER_DEPLOYMENT_OPTIONS.md  COMPATIBILITY_FIX.md  EMERGENCY_FIX.md  GETTING_STARTED.md  GIT_WORKFLOW.md  GRADIO_SELFHOST_GUIDE.md  HF_INFERENCE_ENDPOINTS_GUIDE.md  NATIVE_SETUP_GUIDE.md  PRE_BUILD_CHECKLIST.md  PYTORCH_VERSION_EXPLANATION.md  QUICKSTART.md  QUICKSTART_HF.md  QUICK_FIX.md  QUICK_START.md  README.md  REBUILD_GUIDE.md  REMOTE_DEPLOYMENT.md  REMOTE_PRE_BUILD_CHECKLIST.md  REMOTE_QUICK_FIX.sh  REMOTE_SETUP_INSTRUCTIONS.md  RUN_HF_SPACE_LOCALLY.md  SETUP_GUIDE.md  SIMPLIFIED_BACKEND.md  add-opencv.sh  app.py  bnr.sh  build-backend.sh  deploy-gradio.sh  deploy-remote.sh  docker-compose-minimal.yml  docker-compose.yml  dockerfile  env.example  env.template  final-fix-pytorch-2.5.sh  fix-deps.sh  fix-missing-deps.sh  fix-torch-version.sh  (+27 more)
backend/: README.md  app.py  app_gradio.py  app_gradio_minimal.py  app_minimal.py  app_simple.py  dockerfile  dockerfile_gradio  dockerfile_minimal  main.py  pyproject.toml  requirements.txt  requirements_gradio.txt
backend/app/: __init__.py  config.py
backend/app/models/: __init__.py  generation.py  health.py
backend/app/routes/: __init__.py  generation.py  health.py
backend/app/services/: __init__.py  gpu_service.py  mesh_service.py  model_service.py
backup/: DEPLOY_INSTRUCTIONS.md  status.sh
client/: gradio_client.py
docs/: DEPLOYMENT.md
frontend/: app.py  app_streamlit.py  dockerfile  pyproject.toml  requirements.txt
scripts/: deploy.sh  dev.sh  install.sh  logs.sh  setup.sh  (+4 more)
(+2 files in other folders)
